@@ -1,3 +1,7 @@
+2009-04-06 texmanager.make_dvi now raises an error if LaTeX failed to
+           create an output file. Thanks to Joao Luis Silva for reporting
+           this. - JKS
+
 2009-04-05 _png.read_png() reads 12 bit PNGs (patch from 
            Tobias Wood) - ADS
 
